new psudo class atrributes and some animation effects with transition

--- a/relat_absol_position.html
+++ b/relat_absol_position.html
@@ -11,6 +11,7 @@
         <div id="tv">TV</div>
         <div id="sofa">SOFA</div>
         <div id="fridge">FRIDGE</div>
+        <div id="door">DOOR</div>
     </div>
 </body>
 </html>
